--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
   "dependencies": {
     "core-js": "^3.25.3",
     "nuxt": "^2.15.8",
+    "swiper": "^5.4.2",
     "vue": "^2.7.10",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-cool-lightbox": "^2.7.5",
     "vue-server-renderer": "^2.7.10",
-    "vue-template-compiler": "^2.7.10",
-    "swiper": "^5.4.2",
-    "vue-awesome-swiper": "^4.1.1"
+    "vue-template-compiler": "^2.7.10"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
+    "postcss-nesting": "^12.0.1",
     "tailwindcss": "^3.3.3"
   }
 }
