--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "core-js": "^3.25.3",
     "nuxt": "^2.15.8",
     "swiper": "^5.4.2",
@@ -16,7 +17,8 @@
     "vue-awesome-swiper": "^4.1.1",
     "vue-cool-lightbox": "^2.7.5",
     "vue-server-renderer": "^2.7.10",
-    "vue-template-compiler": "^2.7.10"
+    "vue-template-compiler": "^2.7.10",
+    "vue2-smooth-scroll": "^1.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
